# marching-cubes

./: CMakeLists.txt  README.md  triangles.txt
Include/: Camera.h  GUI.h  Globals.h  MC.h  Menu.h  Renderer.h  Util.h  dirent.h
Shaders/: frag0.glsl  frag1.glsl  vert0.glsl  vert1.glsl
Source/: Camera.cpp  Harness.cpp  MC.cpp  Renderer.cpp  Shader.cpp  main.cpp
Source/GUI/: GUI.cpp  Menu.cpp
Source/Utils/: ImGuiFileDialog.cpp  Util.cpp
